# text-to-speech

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: test_text_to_speech.py
text_to_speech/: cli.py  common.py  tts.py
