[project]
name = "text-to-speech"
version = "0.1.0"
description = "Text to speech using Kokoro"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click",
    "soundfile",
    "kokoro_onnx",
    "onnxruntime"
]

[project.urls]
Homepage = "https://github.com/sukhbinder/text-to-speech"
Changelog = "https://github.com/sukhbinder/text-to-speech/releases"
Issues = "https://github.com/sukhbinder/text-to-speech/issues"
CI = "https://github.com/sukhbinder/text-to-speech/actions"

[project.scripts]
txt2speech = "text_to_speech.cli:cli"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
